@@ -13,7 +13,9 @@ import com.nfm.comsol.runner.SimulationRunner;
 import com.nfm.comsol.util.PathUtils;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 /** CLI entry point only: parsing and dispatch live here; model construction does not. */
@@ -26,7 +28,8 @@ public final class Main {
             String[] args = effectiveArgs(rawArgs);
             Cli cli = Cli.parse(args);
             Path root = PathUtils.detectProjectRoot();
-            Path simulationFile = cli.config == null ? Path.of("config", "simulation.properties") : Path.of(cli.config);
+            Path simulationFile = cli.config == null
+                    ? Paths.get("config", "simulation.properties") : Paths.get(cli.config);
             SimulationConfig simulation = ConfigLoader.loadSimulation(root, simulationFile);
             String mode = cli.mode == null
                     ? (cli.model.equals("full-cell") ? "cycle" : simulation.defaultMode())
@@ -39,9 +42,11 @@ public final class Main {
             if (cli.model.equals("full-cell")) {
                 if (cli.exportOnly) throw new IllegalArgumentException("--export-only is not yet supported for --model full-cell");
                 FullCellConfig cell = ConfigLoader.loadFullCell(root,
-                        cli.fullCellConfig == null ? Path.of("config", "full_cell.properties") : Path.of(cli.fullCellConfig));
+                        cli.fullCellConfig == null
+                                ? Paths.get("config", "full_cell.properties") : Paths.get(cli.fullCellConfig));
                 FullCellBatchRunner batch = new FullCellBatchRunner();
-                var options = new FullCellSimulationRunner.RunOptions(cli.cRate, mode, cli.buildOnly, cli.smokeTest);
+                FullCellSimulationRunner.RunOptions options =
+                        new FullCellSimulationRunner.RunOptions(cli.cRate, mode, cli.buildOnly, cli.smokeTest);
                 if (cli.all) {
                     System.out.println("Full-cell summary: " + batch.runAll(cell, simulation, options));
                 } else {
@@ -93,8 +98,8 @@ public final class Main {
     private static String[] effectiveArgs(String[] raw) {
         if (raw != null && raw.length > 0) return raw;
         String env = System.getenv("NFM_COMSOL_ARGS");
-        if (env == null || env.isBlank()) return new String[0];
-        return splitCommandLine(env).toArray(String[]::new);
+        if (env == null || env.trim().isEmpty()) return new String[0];
+        return splitCommandLine(env).toArray(new String[0]);
     }
 
     private static List<String> splitCommandLine(String text) {
@@ -105,11 +110,11 @@ public final class Main {
             char c = text.charAt(i);
             if (c == '"') quoted = !quoted;
             else if (Character.isWhitespace(c) && !quoted) {
-                if (!current.isEmpty()) { tokens.add(current.toString()); current.setLength(0); }
+                if (current.length() > 0) { tokens.add(current.toString()); current.setLength(0); }
             } else current.append(c);
         }
         if (quoted) throw new IllegalArgumentException("Unclosed quote in NFM_COMSOL_ARGS");
-        if (!current.isEmpty()) tokens.add(current.toString());
+        if (current.length() > 0) tokens.add(current.toString());
         return tokens;
     }
 
@@ -133,23 +138,24 @@ public final class Main {
             Cli c = new Cli();
             for (int i = 0; i < args.length; i++) {
                 switch (args[i]) {
-                    case "--model" -> c.model = value(args, ++i, "--model").toLowerCase();
-                    case "--material" -> c.material = value(args, ++i, "--material");
-                    case "--c-rate" -> c.cRate = Double.parseDouble(value(args, ++i, "--c-rate"));
-                    case "--mode" -> c.mode = value(args, ++i, "--mode").toLowerCase();
-                    case "--config" -> c.config = value(args, ++i, "--config");
-                    case "--full-cell-config" -> c.fullCellConfig = value(args, ++i, "--full-cell-config");
-                    case "--all" -> c.all = true;
-                    case "--build-only" -> c.buildOnly = true;
-                    case "--solve" -> { /* solve is the default explicit action */ }
-                    case "--export-only" -> c.exportOnly = true;
-                    case "--smoke-test" -> c.smokeTest = true;
-                    case "--mesh-convergence" -> c.meshConvergence = true;
-                    case "--parameter-sensitivity" -> c.parameterSensitivity = true;
-                    case "--parameter-attribution" -> c.parameterAttribution = true;
-                    case "--time-convergence" -> c.timeConvergence = true;
-                    case "--help", "-h" -> { usage(); System.exit(0); }
-                    default -> throw new IllegalArgumentException("Unknown argument: " + args[i]);
+                    case "--model": c.model = value(args, ++i, "--model").toLowerCase(); break;
+                    case "--material": c.material = value(args, ++i, "--material"); break;
+                    case "--c-rate": c.cRate = Double.parseDouble(value(args, ++i, "--c-rate")); break;
+                    case "--mode": c.mode = value(args, ++i, "--mode").toLowerCase(); break;
+                    case "--config": c.config = value(args, ++i, "--config"); break;
+                    case "--full-cell-config": c.fullCellConfig = value(args, ++i, "--full-cell-config"); break;
+                    case "--all": c.all = true; break;
+                    case "--build-only": c.buildOnly = true; break;
+                    case "--solve": break; // solve is the default explicit action
+                    case "--export-only": c.exportOnly = true; break;
+                    case "--smoke-test": c.smokeTest = true; break;
+                    case "--mesh-convergence": c.meshConvergence = true; break;
+                    case "--parameter-sensitivity": c.parameterSensitivity = true; break;
+                    case "--parameter-attribution": c.parameterAttribution = true; break;
+                    case "--time-convergence": c.timeConvergence = true; break;
+                    case "--help":
+                    case "-h": usage(); System.exit(0); break;
+                    default: throw new IllegalArgumentException("Unknown argument: " + args[i]);
                 }
             }
             if (c.buildOnly && c.exportOnly) throw new IllegalArgumentException("--build-only and --export-only are mutually exclusive");
@@ -163,7 +169,7 @@ public final class Main {
             if (c.model.equals("particle") && c.mode != null && c.mode.equals("cycle")) {
                 throw new IllegalArgumentException("--mode cycle is available only for --model full-cell");
             }
-            if (c.mode != null && !List.of("charge", "discharge", "cycle").contains(c.mode)) {
+            if (c.mode != null && !Arrays.asList("charge", "discharge", "cycle").contains(c.mode)) {
                 throw new IllegalArgumentException("--mode must be charge, discharge, or cycle");
             }
             if (c.model.equals("particle") && (c.parameterSensitivity || c.parameterAttribution || c.timeConvergence)) {
